Fix toast visibility bug and add syle to toasts in base.css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -127,9 +127,27 @@ a.category-badge > span.badge:hover {
 /*----Taken from stackoverflow to make all card-images same size---*/
 .card-img-top {
     width: 100%;
-    height: 20vw;
+    height: 40vw;
     object-fit: cover;
 }
+
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 
 /* -------------------------------- Media Queries */
 
